--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -2,15 +2,457 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Life expectancy at birth (years)</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>7.786093e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>77.3</td>\n",
+       "      <td>7.097992e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>77.8</td>\n",
+       "      <td>6.973681e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>77.9</td>\n",
+       "      <td>7.564346e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>9.921039e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country  Year  Life expectancy at birth (years)           GDP\n",
+       "0   Chile  2000                              77.3  7.786093e+10\n",
+       "1   Chile  2001                              77.3  7.097992e+10\n",
+       "2   Chile  2002                              77.8  6.973681e+10\n",
+       "3   Chile  2003                              77.9  7.564346e+10\n",
+       "4   Chile  2004                              78.0  9.921039e+10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('all_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Life expectancy at birth (years)</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>96</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>96.000000</td>\n",
+       "      <td>9.600000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>Chile</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2007.500000</td>\n",
+       "      <td>72.789583</td>\n",
+       "      <td>3.880499e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.633971</td>\n",
+       "      <td>10.672882</td>\n",
+       "      <td>5.197561e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2000.000000</td>\n",
+       "      <td>44.300000</td>\n",
+       "      <td>4.415703e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2003.750000</td>\n",
+       "      <td>74.475000</td>\n",
+       "      <td>1.733018e+11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2007.500000</td>\n",
+       "      <td>76.750000</td>\n",
+       "      <td>1.280220e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2011.250000</td>\n",
+       "      <td>78.900000</td>\n",
+       "      <td>4.067510e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2015.000000</td>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>1.810000e+13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country         Year  Life expectancy at birth (years)           GDP\n",
+       "count       96    96.000000                         96.000000  9.600000e+01\n",
+       "unique       6          NaN                               NaN           NaN\n",
+       "top      Chile          NaN                               NaN           NaN\n",
+       "freq        16          NaN                               NaN           NaN\n",
+       "mean       NaN  2007.500000                         72.789583  3.880499e+12\n",
+       "std        NaN     4.633971                         10.672882  5.197561e+12\n",
+       "min        NaN  2000.000000                         44.300000  4.415703e+09\n",
+       "25%        NaN  2003.750000                         74.475000  1.733018e+11\n",
+       "50%        NaN  2007.500000                         76.750000  1.280220e+12\n",
+       "75%        NaN  2011.250000                         78.900000  4.067510e+12\n",
+       "max        NaN  2015.000000                         81.000000  1.810000e+13"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Chile', 'China', 'Germany', 'Mexico', 'United States of America',\n",
+       "       'Zimbabwe'], dtype=object)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Country.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Life expectancy at birth (years)</th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>76.8</td>\n",
+       "      <td>1.030000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>76.9</td>\n",
+       "      <td>1.060000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1.100000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>77.2</td>\n",
+       "      <td>1.150000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>1.230000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>1.310000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>77.8</td>\n",
+       "      <td>1.390000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>78.1</td>\n",
+       "      <td>1.450000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>78.2</td>\n",
+       "      <td>1.470000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>78.5</td>\n",
+       "      <td>1.440000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>78.7</td>\n",
+       "      <td>1.500000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>78.7</td>\n",
+       "      <td>1.550000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>78.8</td>\n",
+       "      <td>1.620000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>78.9</td>\n",
+       "      <td>1.670000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>79.1</td>\n",
+       "      <td>1.740000e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>79.3</td>\n",
+       "      <td>1.810000e+13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Country  Year  Life expectancy at birth (years)  \\\n",
+       "64  United States of America  2000                              76.8   \n",
+       "65  United States of America  2001                              76.9   \n",
+       "66  United States of America  2002                              77.0   \n",
+       "67  United States of America  2003                              77.2   \n",
+       "68  United States of America  2004                              77.5   \n",
+       "69  United States of America  2005                              77.5   \n",
+       "70  United States of America  2006                              77.8   \n",
+       "71  United States of America  2007                              78.1   \n",
+       "72  United States of America  2008                              78.2   \n",
+       "73  United States of America  2009                              78.5   \n",
+       "74  United States of America  2010                              78.7   \n",
+       "75  United States of America  2011                              78.7   \n",
+       "76  United States of America  2012                              78.8   \n",
+       "77  United States of America  2013                              78.9   \n",
+       "78  United States of America  2014                              79.1   \n",
+       "79  United States of America  2015                              79.3   \n",
+       "\n",
+       "             GDP  \n",
+       "64  1.030000e+13  \n",
+       "65  1.060000e+13  \n",
+       "66  1.100000e+13  \n",
+       "67  1.150000e+13  \n",
+       "68  1.230000e+13  \n",
+       "69  1.310000e+13  \n",
+       "70  1.390000e+13  \n",
+       "71  1.450000e+13  \n",
+       "72  1.470000e+13  \n",
+       "73  1.440000e+13  \n",
+       "74  1.500000e+13  \n",
+       "75  1.550000e+13  \n",
+       "76  1.620000e+13  \n",
+       "77  1.670000e+13  \n",
+       "78  1.740000e+13  \n",
+       "79  1.810000e+13  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.Country == 'United States of America']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -24,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
